--- a/TaskTracker_CRUD.Server/appsettings.json
+++ b/TaskTracker_CRUD.Server/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TrackedTaskContext": "Server=(localdb)\\MSSQLLocalDB;Database=TrackedTaskDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TrackedTaskContext": "Server=(localdb)\\MSSQLLocalDB;Database=TrackedTaskDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "RedditCommentsContext": "Server=(localdb)\\MSSQLLocalDB;Database=RedditCommentsDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
